[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Shot01.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "reload"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 50, 10, 0 ),
"update": 0,
"values": [ Color( 0.639216, 0.631373, 0.494118, 1 ), Color( 1, 1, 1, 1 ), Color( 0.639216, 0.631373, 0.494118, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "respawn"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 5, 1 ),
"update": 0,
"values": [ Color( 0.164706, 0.2, 0.176471, 0 ), Color( 0.639216, 0.631373, 0.494118, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "shooting"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.188235, 0, 1 ), Color( 0.494118, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "turn"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.3, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.639216, 0.631373, 0.494118, 1 ) ]
}

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 6, 0, 1 )
flag_disable_z = true
gravity = Vector3( 0, 1, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 2.0
angle = 90.0
angle_random = 1.0
scale = 5.0
hue_variation = 1.0
hue_variation_random = 1.0

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 5, 20, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 1, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
scale = 5.0
hue_variation = 1.0
hue_variation_random = 1.0

[sub_resource type="Animation" id=7]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:process_material:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4.79681, 9.90082 )

[node name="Shot01" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -10.0
margin_top = -50.0
margin_right = 10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 10, 20 )
color = Color( 0.164706, 0.2, 0.176471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/reload = SubResource( 1 )
anims/respawn = SubResource( 2 )
anims/shooting = SubResource( 3 )
anims/turn = SubResource( 4 )

[node name="ParticleTrail" type="Particles2D" parent="."]
visible = false
position = Vector2( 0, -5 )
amount = 30
lifetime = 15.0
speed_scale = 50.0
process_material = SubResource( 5 )

[node name="ParticleDir" type="Particles2D" parent="."]
position = Vector2( 0, -30 )
emitting = false
amount = 12
lifetime = 0.6
one_shot = true
explosiveness = 0.8
local_coords = false
process_material = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ParticleDir"]
anims/fade_out = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -19.9842 )
shape = SubResource( 8 )
[connection signal="area_entered" from="." to="." method="_on_Shot01_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
